--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -3,11 +3,6 @@
 @tailwind utilities;
 
 body{
-    @apply bg-black text-white
+    @apply bg-black text-white text-[15px]
 }
 
-/* 
-  genişlik 1265 px 
-  sag sidebar : 350px
- content alanı:  auto
-*/
